// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser > can parse arrays 1`] = `
[
  {
    "Comments": [],
    "Name": "unlimited-people",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "person",
          },
        ],
      },
    ],
  },
  {
    "Comments": [
      {
        "Content": "some",
        "Leading": false,
        "Type": "comment",
      },
    ],
    "Name": "at-least-one-person",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": Infinity,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "person",
          },
        ],
      },
    ],
  },
  {
    "Comments": [
      {
        "Content": "comment",
        "Leading": false,
        "Type": "comment",
      },
    ],
    "Name": "zero-or-one-person",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "person",
          },
        ],
      },
    ],
  },
  {
    "Comments": [],
    "Name": "one-or-two-people",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 2,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "person",
          },
        ],
      },
    ],
  },
  {
    "Comments": [],
    "Name": "zero-or-two-people",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 2,
          "n": 0,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "person",
          },
        ],
      },
    ],
  },
  {
    "Comments": [],
    "Name": "two-or-infinity-people",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": Infinity,
          "n": 2,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "person",
          },
        ],
      },
    ],
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "person",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "name",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "age",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "uint",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "Name": "ActionsPerformActionsParameters",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 4,
          "n": 1,
        },
        "Type": {
          "Comments": [],
          "IsChoiceAddition": false,
          "Name": "",
          "Properties": [
            {
              "Comments": [],
              "HasCut": true,
              "Name": "type",
              "Occurrence": {
                "m": 1,
                "n": 1,
              },
              "Type": [
                {
                  "Type": "literal",
                  "Unwrapped": false,
                  "Value": "key",
                },
              ],
            },
            {
              "Comments": [],
              "HasCut": true,
              "Name": "id",
              "Occurrence": {
                "m": 1,
                "n": 1,
              },
              "Type": [
                "text",
              ],
            },
            {
              "Comments": [],
              "HasCut": true,
              "Name": "actions",
              "Occurrence": {
                "m": 1,
                "n": 1,
              },
              "Type": [
                {
                  "Type": "group",
                  "Unwrapped": false,
                  "Value": "ActionItems",
                },
              ],
            },
            {
              "Comments": [],
              "HasCut": false,
              "Name": "text",
              "Occurrence": {
                "m": Infinity,
                "n": 0,
              },
              "Type": [
                "any",
              ],
            },
          ],
          "Type": "group",
        },
      },
    ],
  },
  {
    "Comments": [],
    "Name": "script.MappingRemoteValue",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": {
          "Comments": [],
          "Name": "",
          "Type": "array",
          "Values": [
            {
              "Comments": [],
              "HasCut": false,
              "Name": "",
              "Occurrence": {
                "m": 1,
                "n": 1,
              },
              "Type": [
                {
                  "Type": "group",
                  "Unwrapped": false,
                  "Value": "script.RemoteValue",
                },
                "text",
              ],
            },
            {
              "Comments": [],
              "HasCut": false,
              "Name": "",
              "Occurrence": {
                "m": 1,
                "n": 1,
              },
              "Type": [
                {
                  "Type": "group",
                  "Unwrapped": false,
                  "Value": "script.RemoteValue",
                },
              ],
            },
          ],
        },
      },
    ],
  },
]
`;

exports[`parser > can parse choices 1`] = `
[
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "attire",
    "PropertyType": [
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "bow tie",
      },
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "necktie",
      },
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "Internet attire",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "attireBlock",
    "PropertyType": [
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "bow tie",
      },
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "necktie",
      },
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "Internet attire",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "attireGroup",
    "PropertyType": [
      {
        "Type": "group",
        "Unwrapped": false,
        "Value": "attire",
      },
      {
        "Type": "group",
        "Unwrapped": false,
        "Value": "attireBlock",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "protocol",
    "PropertyType": [
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": 6,
      },
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": 17,
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "address",
    "Properties": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "delivery",
          },
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "delivery",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "street",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "number",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "uint",
        ],
      },
      [
        {
          "Comments": [],
          "HasCut": false,
          "Name": "",
          "Occurrence": {
            "m": 1,
            "n": 1,
          },
          "Type": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "city",
          },
        },
        {
          "Comments": [],
          "HasCut": true,
          "Name": "po-box",
          "Occurrence": {
            "m": 1,
            "n": 1,
          },
          "Type": [
            "uint",
          ],
        },
      ],
      [
        {
          "Comments": [],
          "HasCut": false,
          "Name": "",
          "Occurrence": {
            "m": 1,
            "n": 1,
          },
          "Type": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "city",
          },
        },
        {
          "Comments": [],
          "HasCut": true,
          "Name": "foo",
          "Occurrence": {
            "m": 1,
            "n": 1,
          },
          "Type": [
            "tstr",
            "uint",
          ],
        },
        {
          "Comments": [],
          "HasCut": false,
          "Name": "",
          "Occurrence": {
            "m": 1,
            "n": 1,
          },
          "Type": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "foobar",
          },
        },
        {
          "Comments": [],
          "HasCut": true,
          "Name": "per-pickup",
          "Occurrence": {
            "m": 1,
            "n": 1,
          },
          "Type": [
            {
              "Type": "literal",
              "Unwrapped": false,
              "Value": true,
            },
          ],
        },
      ],
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "city",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "name",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "zip-code",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "uint",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": true,
    "Name": "attire",
    "PropertyType": [
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "swimwear",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": true,
    "Name": "delivery",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "lat",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "float",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "long",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "float",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "drone-type",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
    ],
    "Type": "group",
  },
]
`;

exports[`parser > can parse comments 1`] = `
[
  {
    "Comments": [
      {
        "Content": "This is a comment",
        "Leading": false,
        "Type": "comment",
      },
      {
        "Content": "foobar",
        "Leading": false,
        "Type": "comment",
      },
      {
        "Content": "This is another",
        "Leading": false,
        "Type": "comment",
      },
      {
        "Content": "very nice comment",
        "Leading": false,
        "Type": "comment",
      },
    ],
    "IsChoiceAddition": false,
    "Name": "person",
    "Properties": [
      {
        "Comments": [
          {
            "Content": "a good employer",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "employer",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [
      {
        "Content": "some comment",
        "Leading": false,
        "Type": "comment",
      },
      {
        "Content": "another comment",
        "Leading": false,
        "Type": "comment",
      },
    ],
    "IsChoiceAddition": false,
    "Name": "foo",
    "Properties": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "bar",
          },
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [
      {
        "Content": "some g",
        "Leading": false,
        "Type": "comment",
      },
    ],
    "IsChoiceAddition": false,
    "Name": "som",
    "Properties": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "g",
          },
        ],
      },
    ],
    "Type": "group",
  },
]
`;

exports[`parser > can parse compositions 1`] = `
[
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "person",
    "Properties": [
      {
        "Comments": [
          {
            "Content": "an identity",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "identity",
          },
        ],
      },
      {
        "Comments": [
          {
            "Content": "some employer",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "employer",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "dog",
    "Properties": [
      {
        "Comments": [
          {
            "Content": "an identity again",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "identity",
          },
        ],
      },
      {
        "Comments": [
          {
            "Content": "some length",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "leash-length",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "float",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "identity",
    "Properties": [
      {
        "Comments": [
          {
            "Content": "an age",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "age",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [
          {
            "Content": "a name",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "name",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "Name": "Geography",
    "Type": "array",
    "Values": [
      {
        "Comments": [
          {
            "Content": "a city",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "city",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [
          {
            "Content": "some coordinates",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "gpsCoordinates",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "GpsCoordinates",
          },
        ],
      },
    ],
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "GpsCoordinates",
    "Properties": [
      {
        "Comments": [
          {
            "Content": "degrees, scaled by 10^7",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "longitude",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "uint",
        ],
      },
      {
        "Comments": [
          {
            "Content": "degreed, scaled by 10^7",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "latitude",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "uint",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "located-samples",
    "Properties": [
      {
        "Comments": [
          {
            "Content": "some",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": false,
        "Name": "sample-point",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [
          {
            "Content": "comments",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": false,
        "Name": "samples",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Comments": [],
            "Name": "",
            "Type": "array",
            "Values": [
              {
                "Comments": [],
                "HasCut": false,
                "Name": "",
                "Occurrence": {
                  "m": Infinity,
                  "n": 1,
                },
                "Type": "float",
              },
            ],
          },
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "extensible-map-example",
    "Properties": [
      {
        "Comments": [
          {
            "Content": "some",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "optional-key",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [
          {
            "Content": "really",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "optional-key2",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [
          {
            "Content": "interesting",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "optional-key3",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [
          {
            "Content": "comments",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": false,
        "Name": "tstr",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "any",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "personWithoutComment",
    "Properties": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "identity",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "employer",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "dogWithoutComment",
    "Properties": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "identity",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "leash-length",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "float",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "identityWithoutComment",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "age",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "name",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "Name": "GeographyWithoutComment",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "city",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "gpsCoordinates",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "GpsCoordinates",
          },
        ],
      },
    ],
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "GpsCoordinatesWithoutComment",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "longitude",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "uint",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "latitude",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "uint",
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "located-samples-without-comments",
    "Properties": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "sample-point",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [],
        "HasCut": false,
        "Name": "samples",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Comments": [],
            "Name": "",
            "Type": "array",
            "Values": [
              {
                "Comments": [],
                "HasCut": false,
                "Name": "",
                "Occurrence": {
                  "m": Infinity,
                  "n": 1,
                },
                "Type": "float",
              },
            ],
          },
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "extensible-map-example-without-comments",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "optional-key",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "optional-key2",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "optional-key3",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [],
        "HasCut": false,
        "Name": "tstr",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "any",
        ],
      },
    ],
    "Type": "group",
  },
]
`;

exports[`parser > can parse nested groups 1`] = `
[
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "f",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "o",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Comments": [],
            "IsChoiceAddition": false,
            "Name": "",
            "Properties": [
              {
                "Comments": [],
                "HasCut": true,
                "Name": "o",
                "Occurrence": {
                  "m": 1,
                  "n": 1,
                },
                "Type": [
                  {
                    "Comments": [],
                    "IsChoiceAddition": false,
                    "Name": "",
                    "Properties": [
                      {
                        "Comments": [],
                        "HasCut": true,
                        "Name": "b",
                        "Occurrence": {
                          "m": 1,
                          "n": 1,
                        },
                        "Type": [
                          {
                            "Comments": [],
                            "IsChoiceAddition": false,
                            "Name": "",
                            "Properties": [
                              {
                                "Comments": [],
                                "HasCut": true,
                                "Name": "a",
                                "Occurrence": {
                                  "m": 1,
                                  "n": 1,
                                },
                                "Type": [
                                  {
                                    "Comments": [],
                                    "IsChoiceAddition": false,
                                    "Name": "",
                                    "Properties": [
                                      {
                                        "Comments": [],
                                        "HasCut": true,
                                        "Name": "r",
                                        "Occurrence": {
                                          "m": 1,
                                          "n": 1,
                                        },
                                        "Type": [
                                          "text",
                                        ],
                                      },
                                    ],
                                    "Type": "group",
                                  },
                                ],
                              },
                            ],
                            "Type": "group",
                          },
                        ],
                      },
                    ],
                    "Type": "group",
                  },
                ],
              },
            ],
            "Type": "group",
          },
        ],
      },
    ],
    "Type": "group",
  },
]
`;

exports[`parser > can parse occurrences 1`] = `
[
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "someGroup",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "optional",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "anotherOptional",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "atLeastOne",
        "Occurrence": {
          "m": Infinity,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "numberedOccurence",
        "Occurrence": {
          "m": 42,
          "n": 23,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "withoutLeftSide",
        "Occurrence": {
          "m": 42,
          "n": 0,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "withoutRightSide",
        "Occurrence": {
          "m": Infinity,
          "n": 23,
        },
        "Type": [
          "tstr",
        ],
      },
    ],
    "Type": "group",
  },
]
`;

exports[`parser > can parse operators 1`] = `
[
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "ip4",
    "PropertyType": [
      {
        "Operator": {
          "Type": "size",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 4,
          },
        },
        "Type": "bstr",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "label",
    "PropertyType": [
      {
        "Operator": {
          "Type": "size",
          "Value": {
            "Type": "range",
            "Unwrapped": false,
            "Value": {
              "Inclusive": true,
              "Max": {
                "Type": "literal",
                "Unwrapped": false,
                "Value": 63,
              },
              "Min": {
                "Type": "literal",
                "Unwrapped": false,
                "Value": 1,
              },
            },
          },
        },
        "Type": "bstr",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "nai",
    "PropertyType": [
      {
        "Operator": {
          "Type": "regexp",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": "[A-Za-z0-9]+@[A-Za-z0-9]+(\\\\\\\\.[A-Za-z0-9]+)+",
          },
        },
        "Type": "tstr",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "rwxbits",
    "PropertyType": [
      {
        "Operator": {
          "Type": "bits",
          "Value": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "rwx",
          },
        },
        "Type": "uint",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "foo",
    "PropertyType": [
      {
        "Operator": {
          "Type": "and",
          "Value": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "nai",
          },
        },
        "Type": {
          "Type": "group",
          "Unwrapped": false,
          "Value": "ip4",
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "fooWithin",
    "PropertyType": [
      {
        "Operator": {
          "Type": "within",
          "Value": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "nai",
          },
        },
        "Type": {
          "Type": "group",
          "Unwrapped": false,
          "Value": "ip4",
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "bar",
    "PropertyType": [
      {
        "Operator": {
          "Type": "ne",
          "Value": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "fooWithin",
          },
        },
        "Type": {
          "Type": "group",
          "Unwrapped": false,
          "Value": "foo",
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [
      {
        "Content": "unit: m/s",
        "Leading": false,
        "Type": "comment",
      },
    ],
    "IsChoiceAddition": false,
    "Name": "speed",
    "PropertyType": [
      {
        "Operator": {
          "Type": "ge",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 0,
          },
        },
        "Type": {
          "Type": "group",
          "Unwrapped": false,
          "Value": "number",
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [
      {
        "Content": "unit: m/s",
        "Leading": false,
        "Type": "comment",
      },
    ],
    "IsChoiceAddition": false,
    "Name": "speed2",
    "PropertyType": [
      {
        "Operator": {
          "Type": "le",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 10,
          },
        },
        "Type": {
          "Type": "group",
          "Unwrapped": false,
          "Value": "number",
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [
      {
        "Content": "unit: m/s",
        "Leading": false,
        "Type": "comment",
      },
    ],
    "IsChoiceAddition": false,
    "Name": "speed3",
    "PropertyType": [
      {
        "Operator": {
          "Type": "gt",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 0,
          },
        },
        "Type": {
          "Type": "group",
          "Unwrapped": false,
          "Value": "number",
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [
      {
        "Content": "unit: m/s",
        "Leading": false,
        "Type": "comment",
      },
    ],
    "IsChoiceAddition": false,
    "Name": "speed4",
    "PropertyType": [
      {
        "Operator": {
          "Type": "lt",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 10,
          },
        },
        "Type": {
          "Type": "group",
          "Unwrapped": false,
          "Value": "number",
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "displayed-step",
    "PropertyType": [
      {
        "Operator": {
          "Type": "default",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 1,
          },
        },
        "Type": {
          "Type": "group",
          "Unwrapped": false,
          "Value": "number",
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "someGroup",
    "Properties": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "optional",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          {
            "Operator": {
              "Type": "default",
              "Value": {
                "Type": "literal",
                "Unwrapped": false,
                "Value": "foobar",
              },
            },
            "Type": "tstr",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "orientation",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Operator": {
          "Type": "default",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": "portrait",
          },
        },
        "Type": [
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": "portrait",
          },
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": "landscape",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "scale",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          {
            "Operator": {
              "Type": "default",
              "Value": {
                "Type": "literal",
                "Unwrapped": false,
                "Value": 1,
              },
            },
            "Type": {
              "Type": "range",
              "Unwrapped": false,
              "Value": {
                "Inclusive": false,
                "Max": {
                  "Type": "literal",
                  "Unwrapped": false,
                  "Value": 2,
                },
                "Min": {
                  "Type": "literal",
                  "Unwrapped": false,
                  "Value": 0,
                },
              },
            },
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "shrinkToFit",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          {
            "Operator": {
              "Type": "default",
              "Value": {
                "Type": "literal",
                "Unwrapped": false,
                "Value": true,
              },
            },
            "Type": "bool",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "shrinkToFitP",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Operator": {
          "Type": "default",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": true,
          },
        },
        "Type": [
          "bool",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "bottom",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Operator": {
          "Type": "default",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 1,
          },
        },
        "Type": [
          {
            "Operator": {
              "Type": "ge",
              "Value": {
                "Type": "literal",
                "Unwrapped": false,
                "Value": 0,
              },
            },
            "Type": "float",
          },
        ],
      },
    ],
    "Type": "group",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "optional",
    "PropertyType": [
      {
        "Operator": {
          "Type": "default",
          "Value": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": "foobar",
          },
        },
        "Type": "tstr",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "orientation",
    "Operator": {
      "Type": "default",
      "Value": {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "portrait",
      },
    },
    "PropertyType": [
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "portrait",
      },
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": "landscape",
      },
    ],
    "Type": "variable",
  },
]
`;

exports[`parser > can parse ranges 1`] = `
[
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "device-address",
    "PropertyType": [
      {
        "Type": "group",
        "Unwrapped": false,
        "Value": "byte",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "max-byte",
    "PropertyType": [
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": 255,
      },
      "float",
      "int",
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "my_uri",
    "PropertyType": [
      {
        "Type": "tag",
        "Unwrapped": false,
        "Value": {
          "NumericPart": 6.32,
          "TypePart": "tstr",
        },
      },
      "tstr",
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "byte",
    "PropertyType": [
      {
        "Type": "range",
        "Unwrapped": false,
        "Value": {
          "Inclusive": true,
          "Max": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "max-byte",
          },
          "Min": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 0,
          },
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "first-non-byte",
    "PropertyType": [
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": 256,
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "byte1",
    "PropertyType": [
      {
        "Type": "range",
        "Unwrapped": false,
        "Value": {
          "Inclusive": false,
          "Max": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "first-non-byte",
          },
          "Min": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 0,
          },
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "min..max",
    "PropertyType": [
      {
        "Type": "literal",
        "Unwrapped": false,
        "Value": 0,
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "byte2",
    "PropertyType": [
      {
        "Type": "group",
        "Unwrapped": false,
        "Value": "min..max...first-non-byte",
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "byte3",
    "PropertyType": [
      {
        "Type": "range",
        "Unwrapped": false,
        "Value": {
          "Inclusive": false,
          "Max": {
            "Type": "group",
            "Unwrapped": false,
            "Value": "first-non-byte",
          },
          "Min": "min..max",
        },
      },
    ],
    "Type": "variable",
  },
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "js-int",
    "PropertyType": [
      {
        "Type": "range",
        "Unwrapped": false,
        "Value": {
          "Inclusive": false,
          "Max": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 9007199254740991,
          },
          "Min": {
            "Type": "literal",
            "Unwrapped": false,
            "Value": -900719925474099,
          },
        },
      },
    ],
    "Type": "variable",
  },
]
`;

exports[`parser > can parse unwrapped arrays 1`] = `
[
  {
    "Comments": [],
    "Name": "basic-header",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": true,
        "Name": "field1",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "int",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "field2",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "text",
        ],
      },
    ],
  },
  {
    "Comments": [],
    "Name": "advanced-header",
    "Type": "array",
    "Values": [
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": true,
            "Value": "basic-header",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "field3",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "bytes",
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "field4",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": true,
            "Value": "time",
          },
        ],
      },
    ],
  },
]
`;

exports[`parser > should correctly parse CDDL file 1`] = `
[
  {
    "Comments": [],
    "IsChoiceAddition": false,
    "Name": "Example",
    "Properties": [
      {
        "Comments": [
          {
            "Content": "summary of test",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "title",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [
          {
            "Content": "longer description of test",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "description",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "tstr",
        ],
      },
      {
        "Comments": [
          {
            "Content": "Is this a success or failure test",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "fail",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          "bool",
        ],
      },
      {
        "Comments": [
          {
            "Content": "Inputs to create the test",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "input",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "Inputs",
          },
        ],
      },
      {
        "Comments": [
          {
            "Content": "Intermediate values for debugging",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "intermediates",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "Intermediates",
          },
        ],
      },
      {
        "Comments": [
          {
            "Content": "Outputs of the test",
            "Leading": false,
            "Type": "comment",
          },
        ],
        "HasCut": true,
        "Name": "output",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "Outputs",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "attire",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": "bow tie",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "someBool",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": true,
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "someOtherBool",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": false,
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "count",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 123,
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "negative-count",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": -123,
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "rating",
        "Occurrence": {
          "m": Infinity,
          "n": 0,
        },
        "Type": [
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": 0.5724646875815566,
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "hexa",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": "0x123",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "bin",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": "0b123",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": false,
        "Name": "",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "group",
            "Unwrapped": false,
            "Value": "foobar",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "samples",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Comments": [],
            "Name": "",
            "Type": "array",
            "Values": [
              {
                "Comments": [],
                "HasCut": false,
                "Name": "",
                "Occurrence": {
                  "m": Infinity,
                  "n": 1,
                },
                "Type": "float",
              },
            ],
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "multitype",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          "float",
          "tstr",
          {
            "Type": "literal",
            "Unwrapped": false,
            "Value": "foobar",
          },
        ],
      },
      {
        "Comments": [],
        "HasCut": true,
        "Name": "my_uri",
        "Occurrence": {
          "m": 1,
          "n": 1,
        },
        "Type": [
          {
            "Type": "tag",
            "Unwrapped": false,
            "Value": {
              "NumericPart": 6.32,
              "TypePart": "tstr",
            },
          },
          "tstr",
        ],
      },
    ],
    "Type": "group",
  },
]
`;
